[minor] Removed pointless index.js

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "type": "git",
     "url": "git://github.com/qfox/ZeParser.git"
   },
-  "main": "./index",
+  "main": "./ZeParser",
   "engines": {
     "node": "*"
   },
