--- a/package.json
+++ b/package.json
@@ -13,5 +13,11 @@
     "node": "*"
   },
   "dependencies": {},
-  "devDependencies": {}
+  "devDependencies": {},
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://raw.github.com/qfox/ZeParser/master/LICENSE"
+    }
+  ]
 }
